# liquid-staking-program

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE.md  README.md
.buildkite/: pipeline.yml  verify.sh
programs/marinade-finance/: Cargo.toml
programs/marinade-finance/src/: calc.rs  checks.rs  error.rs  lib.rs  liq_pool.rs  list.rs  located.rs  stake_system.rs  stake_wrapper.rs  state.rs  ticket_account.rs  validator_system.rs
programs/marinade-finance/src/events/: admin.rs  crank.rs  delayed_unstake.rs  liq_pool.rs  management.rs  mod.rs  user.rs
programs/marinade-finance/src/instructions/: mod.rs
programs/marinade-finance/src/instructions/admin/: change_authority.rs  config_lp.rs  config_marinade.rs  config_validator_system.rs  emergency_pause.rs  initialize.rs  mod.rs  realloc_stake_list.rs  realloc_validator_list.rs  set_emergency_pause.rs
programs/marinade-finance/src/liq_pool/: add_liquidity.rs  config_lp.rs  configure.rs  initialize.rs  remove_liquidity.rs  set_lp_params.rs
programs/marinade-finance/src/stake_system/: deactivate_stake.rs  deposit_stake_account.rs  emergency_unstake.rs  merge.rs  partial_unstake.rs  stake_reserve.rs
programs/marinade-finance/src/state/: change_authority.rs  claim.rs  config_marinade.rs  configure.rs  delinquent_upgrader.rs  deposit.rs  fee.rs  fix_forced_unstake.rs  initialize.rs  liq_pool.rs  liquid_unstake.rs  list.rs  mod.rs  order_unstake.rs  stake_system.rs  update.rs  validator_system.rs
programs/marinade-finance/src/validator_system/: add.rs  config_validator_system.rs  remove.rs  set_score.rs
(+34 files in other folders)
